Rebrand user-facing app as T-Ride
